--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "turbo": "^2.0.0"
   },
+    "packageManager": "npm@10.0.0",
   "engines": {
     "node": ">=18.0.0"
   }
