--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules",
+    "deploy": "npm run build && vercel --prod",
+    "deploy:preview": "npm run build && vercel",
     "web": "npm run dev --workspace=apps/web",
     "admin": "npm run dev --workspace=apps/admin",
     "renderer": "npm run dev --workspace=apps/renderer"
