--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "name": "modular-affiliate-system"
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "cd apps/web && npm run build",
+  "outputDirectory": "apps/web/.next",
+  "framework": "nextjs",
+  "installCommand": "npm install"
 }
