--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -9,6 +9,15 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_STARTER_PRICE_ID=your_stripe_starter_price_id
+STRIPE_PRO_PRICE_ID=your_stripe_pro_price_id
+STRIPE_AGENCY_PRICE_ID=your_stripe_agency_price_id
+STRIPE_STARTER_PRICE_ID=your_stripe_starter_price_id
+STRIPE_PRO_PRICE_ID=your_stripe_pro_price_id
+STRIPE_AGENCY_PRICE_ID=your_stripe_agency_price_id
+STRIPE_STARTER_PRICE_ID=your_stripe_starter_price_id
+STRIPE_PRO_PRICE_ID=your_stripe_pro_price_id
+STRIPE_AGENCY_PRICE_ID=your_stripe_agency_price_id
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
