Add production optimizations for Vercel deployment
- Configure API function timeout (30s max duration)
- Add cache headers for API routes
- Enable compression and security headers
- Add image optimization settings
- Update allowed origins for production domain

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -3,5 +3,22 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "crons": [],
+  "functions": {
+    "api/**/*.ts": {
+      "maxDuration": 30
+    }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, must-revalidate"
+        }
+      ]
+    }
+  ]
 }
