--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -6,18 +6,12 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 
 # Stripe Configuration
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
-STRIPE_SECRET_KEY=your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
-STRIPE_STARTER_PRICE_ID=your_stripe_starter_price_id
-STRIPE_PRO_PRICE_ID=your_stripe_pro_price_id
-STRIPE_AGENCY_PRICE_ID=your_stripe_agency_price_id
-STRIPE_STARTER_PRICE_ID=your_stripe_starter_price_id
-STRIPE_PRO_PRICE_ID=your_stripe_pro_price_id
-STRIPE_AGENCY_PRICE_ID=your_stripe_agency_price_id
-STRIPE_STARTER_PRICE_ID=your_stripe_starter_price_id
-STRIPE_PRO_PRICE_ID=your_stripe_pro_price_id
-STRIPE_AGENCY_PRICE_ID=your_stripe_agency_price_id
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
+STRIPE_SECRET_KEY=sk_test_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+STRIPE_STARTER_PRICE_ID=price_xxx
+STRIPE_PRO_PRICE_ID=price_xxx
+STRIPE_AGENCY_PRICE_ID=price_xxx
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
@@ -28,4 +22,9 @@ SENDSHARK_API_URL=https://api.sendshark.com/v1
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 NODE_ENV=development
+
+# Admin Features
+# For admin credit topup - success/cancel URLs for Stripe checkout
+# In production: https://launchpad4success.pro
