--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,11 +13,13 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.400.0",
     "next": "^14.2.33",
@@ -25,7 +27,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "stripe": "^20.1.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
