--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,7 +37,7 @@
     "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.19",
     "eslint": "^9",
-    "eslint-config-next": "^16.0.3",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
