fix: Add comprehensive RLS policies for all Supabase tables
- Enable RLS on all existing tables with conditional checks
- Add user isolation policies (users can only access their own data)
- Implement team collaboration with role-based access control
- Allow public access to published funnels and active offers
- Enable anonymous tracking for clicks, conversions, and leads
- Add service role policies for system operations
- Fix all RLS warnings in Supabase dashboard
- Created documentation: RLS_FIX_COMPLETE.md, RLS_FIX_SUMMARY.md, RLS_FIX_CHECKLIST.md

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^18",
     "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "postcss": "^8.4.38",
