🔧 Fix Funnel Builder Personality Issues
✅ Fixed Personality Selection Persistence
- Added localStorage persistence to BrandModeContext
- Personality choices now saved across page reloads and navigation
- Auto-loads previously selected personality on initialization

✅ Fixed Back Button Behavior in Builder
- Added onSelectionComplete callback to PersonalitySelector
- Personality panel now closes automatically after selection
- Added 'Save & Close' button for explicit closing
- Improved UX with 150ms delay to show selection feedback

🎯 Issues Resolved:
- Personality choice not being saved
- Back button going to another page instead of closing choice screen
- Better user feedback during personality selection

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development next dev",
+    "dev:debug": "NODE_ENV=development DEBUG=* next dev",
+    "dev:turbo": "NODE_ENV=development next dev --turbo",
+    "dev:verbose": "NODE_ENV=development next dev --experimental-debug",
     "build": "next build",
+    "build:debug": "NEXT_DEBUG=1 next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "deploy": "vercel --prod",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "analyze": "ANALYZE=true npm run build",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
