--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
+    "dev:debug": "NODE_ENV=development DEBUG=* turbo run dev",
+    "dev:web": "cd apps/web && npm run dev",
+    "dev:web:debug": "cd apps/web && npm run dev:debug",
+    "dev:web:verbose": "cd apps/web && npm run dev:verbose",
+    "dev:enhanced": "cd apps/web && ./dev-server.sh",
     "build": "turbo run build",
+    "build:debug": "NODE_ENV=development turbo run build:debug",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "type-check": "turbo run type-check",
     "clean": "turbo run clean && rm -rf node_modules",
     "deploy": "npm run build && vercel --prod",
     "deploy:preview": "npm run build && vercel",
