--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^18.3.0",
     "stripe": "^20.1.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
