--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.0",
@@ -33,6 +36,7 @@
     "openai": "^6.9.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "sonner": "^2.0.7",
     "stripe": "^20.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
