--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build:debug": "NODE_ENV=development turbo run build:debug",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
+    "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\" \"#.next\" \"#.turbo\" \"#.vercel\"",
+    "lint:md:fix": "markdownlint-cli2 \"**/*.md\" \"#node_modules\" \"#.next\" \"#.turbo\" \"#.vercel\" --fix",
     "type-check": "turbo run type-check",
     "clean": "turbo run clean && rm -rf node_modules",
     "deploy": "npm run build && vercel --prod",
@@ -35,6 +37,11 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "vercel": "^50.13.2"
+    "vercel": "50.14.0"
+  },
+  "lint-staged": {
+    "*.md": [
+      "markdownlint-cli2 --fix"
+    ]
   }
 }
